# calculator

./: .gitignore  CMakeLists.txt  README.md  install.sh  test_san.sh  tsan_suppressions.txt  uninstall.sh
client/: main.cpp
include/: app.hpp  cache.hpp  calculate.h  compute.hpp  db_conn.hpp  logger.hpp  operation.hpp  parser.hpp  parsing.h  print.h  printer.hpp  run.h  utils.hpp
src/: calculate.cpp  main.cpp  parsing.cpp  print.cpp  run.cpp
systemd/: calculator.service
tests/: CMakeLists.txt  compute_test.cpp  main.cpp  parser_test.cpp  printer_test.cpp  test_client.cpp
